# lib_iconv

./: .gitignore  CMakeLists.txt  README.md
cmake/: PackageConfig.cmake.in  TestCompareFiles.cmake  config.h.in  configure.cmake  util.cmake
include/: iconv.h.build.in
libcharset/include/: localcharset.h.build.in
libcharset/lib/: relocatable-stub.c
opt/: folders.csv
